syntax = "proto3";

package pam_session;
option go_package = "pkg/pb";
option swift_prefix = "";

import "google/protobuf/timestamp.proto";

service SessionManager {
  rpc RegisterSession(RegisterSessionRequest) returns (RegisterSessionResponse);
  rpc SessionStatus(SessionStatusRequest) returns (SessionStatusResponse);
  rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse);
}

message RegisterSessionRequest {
  string session_id = 1;
  string username = 2;
  string token_hash = 3;
  string local_socket = 4;
  int64 expires_at = 5;
  uint32 pid = 6;
  uint32 ppid = 7;
}

message RegisterSessionResponse {
  bool success = 1;
  string session_id = 2;
  string error = 3;
}

message SessionStatusRequest {
  string session_id = 1;
}

message SessionStatusResponse {
  bool success = 1;
  string error = 2;
  google.protobuf.Timestamp expiry = 3;
}

message CloseSessionRequest {
  string session_id = 1;
  uint32 pid = 2;
}

message CloseSessionResponse {
  bool success = 1;
}
